messages api altered
